# rust-linear-algebra

./: Cargo.toml  README.md
src/: cross_product.rs  lerp.rs  lib.rs  linear_combinaison.rs  main.rs  matrix.rs  minus_one.rs  one.rs  tests.rs  vector.rs
src/matrix/: determinant.rs  gaussian_elemination.rs  identity.rs  inverse.rs  mod.rs  rank.rs  row_echelon.rs  trace.rs  transpose.rs
src/matrix/ops/: add.rs  div.rs  mul.rs  sub.rs
src/num/: mod.rs  one.rs
src/utils/: lerp.rs  mod.rs
src/vector/: angle_cos.rs  mod.rs  norm.rs
src/vector/ops/: add.rs  mod.rs  mul.rs  sub.rs
tests/: cos_test.rs  cross_product_test.rs  determinant_test.rs  inverse_test.rs  lerp_test.rs  linear_combinaison_test.rs  matrix_mul.rs  matrix_mul_test.rs  matrix_test.rs  rank_test.rs  row_echelon_test.rs  trace_test.rs  transpose_test.rs  vector_norm_test.rs  vector_test.rs
