[package]
name = "rust-linear-algebra"
version = "0.1.0"
edition = "2021"
publish = ["linear_algebra_obouhlel"]
description = "A linear algebra library for Rust"
include = ["src/*"]
exclude = ["tests/*"]
readme = "README.md"
repository = "https://github.com/obouhlel/rust-linear-algebra"
license = "MIT"
keywords = ["linear algebra", "math", "matrix", "vector", "rust"]

[dependencies]
