[package]
name = "rust-linear-algebra"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]
description = "A linear algebra library for Rust"
include = ["src/*"]
exclude = ["tests/*"]
readme = "README.md"
homepage = "https://obouhlel.xyz/"
repository = "https://github.com/obouhlel/rust-linear-algebra"
license = "MIT"
keywords = ["math", "matrix", "vector", "rust"]

[dependencies]
