[package]
name = "rust-linear-algebra"
version = "0.1.1"
edition = "2021"
publish = ["crates-io"]
description = "A linear algebra library for Rust"
include = ["src/*"]
exclude = ["tests/*"]
readme = "README.md"
repository = "https://github.com/obouhlel/rust-linear-algebra"
license = "MIT"
keywords = ["math", "matrix", "vector", "rust"]
documentation = "https://docs.rs/rust-linear-algebra"

[dependencies]
